<resources>
    <string name="app_name">Trả lời câu hỏi</string>
    <string name="text_name">Tên đăng nhập</string>
    <string name="text_password">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_forgot_password">Quên mật khẩu</string>
    <string name="btn_register">Đăng ký</string>
    <string name="text_login_with_fb">Đăng nhập với Facebook</string>
    <string name="text_login_with_gg">Đăng nhập với Google</string>
    <string name="activity_register">Đăng ký tài khoản</string>
    <string name="activity_forgot_pass">Quên mật khẩu</string>
    <string name="text_email">Email</string>
    <string name="text_repassword">Xác nhận mật khẩu</string>
    <string name="btn_recover_password">Lấy lại mật khẩu</string>
    <string name="activity_login">Màn hình chính</string>
    <string name="btn_manage_account">Quản lý tài khoản</string>
    <string name="btn_new_game">Trò chơi mới</string>
    <string name="btn_buy_credit">Mua credit</string>
    <string name="btn_history">Lịch sử chơi</string>
    <string name="btn_high_score">Điểm cao nhất</string>
    <string name="text_change_avatar">Đổi hình đại diện</string>
    <string name="btn_update">Cập nhật</string>
    <string name="activity_new_game">Chơi game</string>
    <string name="activity_manage_account">Quản lý tài khoản</string>
    <string name="hint_user_name"><font size="20">Tên tài khoản</font></string>
    <string name="hint_pass_word"><font size="20">Mật khẩu</font></string>
    <string name="txt_point">Điểm:</string>
    <string name="txt_num_point">0</string>
    <string name="txt_choose_field">Chọn lĩnh vực</string>
    <string name="txt_question">Câu hỏi</string>
    <string name="txt_num_question">1</string>
    <string name="txt_time">30s</string>
    <string name="hint_email">Email</string>
    <string name="txt_name">KaiTou</string>
    <string name="txt_credit">2000cre</string>
    <string name="hint_repassword">Xác nhận mật khẩu</string>
    <string name="txt_buy_credit">100</string>
    <string name="txt_credit_of_user">2000</string>
    <string name="txt_50">50:50</string>
    <string name="activity_buy_credit">Mua credit</string>
    <string name="txt_content_D">Nội dung</string>
    <string name="txt_answer_D">D.</string>
    <string name="txt_content_C">Nội dung</string>
    <string name="txt_answer_C">C.</string>
    <string name="txt_answer_B">B.</string>
    <string name="txt_content_B">Nội Dung</string>
    <string name="txt_answer_A">A.</string>
    <string name="txt_content_A">Nội Dung</string>
</resources>
