<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAccountActivity">

    <ImageView
        android:id="@+id/img_hinhDaiDien"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pichu" />

    <TextView
        android:id="@+id/txt_hinhDaiDien_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="handleChangeAvatar"
        android:text="@string/text_change_avatar"
        android:textColor="#030303"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_hinhDaiDien" />

    <EditText
        android:id="@+id/edt_tenDangNhap_manager"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_hinhDaiDien_manager" />

    <EditText
        android:id="@+id/edt_password_manager"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/hint_pass_word"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/custom_edit_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_email_manager"
        app:layout_constraintStart_toStartOf="@+id/edt_email_manager"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_manager" />

    <EditText
        android:id="@+id/edt_repassword_manager"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/hint_repassword"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/custom_edit_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_manager"
        app:layout_constraintStart_toStartOf="@+id/edt_password_manager"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_manager" />

    <EditText
        android:id="@+id/edt_email_manager"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/edt_tenDangNhap_manager"
        app:layout_constraintStart_toStartOf="@+id/edt_tenDangNhap_manager"
        app:layout_constraintTop_toBottomOf="@+id/edt_tenDangNhap_manager" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_button"
        android:text="@string/btn_update"
        android:onClick="handleManager"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_repassword_manager" />


</androidx.constraintlayout.widget.ConstraintLayout>