<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/image_logo4"
        android:layout_width="190dp"
        android:layout_height="170dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <EditText
        android:id="@+id/edt_tendangnhap_forgotpass"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_user_name"
        android:textSize="20sp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo4" />

    <EditText
        android:id="@+id/edt_email_forgotpass"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_tendangnhap_forgotpass"
        app:layout_constraintStart_toStartOf="@+id/edt_tendangnhap_forgotpass"
        app:layout_constraintTop_toBottomOf="@+id/edt_tendangnhap_forgotpass" />

    <EditText
        android:id="@+id/edt_matkhau_register"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/hint_pass_word"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_email_forgotpass"
        app:layout_constraintStart_toStartOf="@+id/edt_email_forgotpass"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_forgotpass" />

    <EditText
        android:id="@+id/edt_pre_password_register"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTintMode="multiply"
        android:ems="10"
        android:hint="@string/text_repassword"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_matkhau_register"
        app:layout_constraintStart_toStartOf="@+id/edt_matkhau_register"
        app:layout_constraintTop_toBottomOf="@+id/edt_matkhau_register" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/custom_edit_button"
        android:text="@string/btn_register"
        android:textColor="#fff"
        android:textSize="18sp"
        android:onClick="handleRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pre_password_register" />
</androidx.constraintlayout.widget.ConstraintLayout>